Place all .html in public/html

--- a/views/partials/list/list.handlebars
+++ b/views/partials/list/list.handlebars
@@ -6,7 +6,7 @@
   <li class="list-group-item">Time: {{time}}</li>
   {{/if}}
   {{#if distance}}
-  <li class="list-group-item">Distance: {{distance}} mile(s)</li>
+  <li class="list-group-item">Distance: {{distance}} miles</li>
   {{/if}}
   {{#if workout_length}}
   <li class="list-group-item">Workout Length: {{workout_length}}</li>
@@ -21,6 +21,6 @@
   <li class="list-group-item">Stress: {{stress_score}}</li>
   {{/if}}
   {{#if has_heartrate}}
-  <li class="list-group-item">Heart Rate: {{heart_rate}}</li>
+  <li class="list-group-item">Heart Rate: {{heart_rate}} BPM</li>
   {{/if}}
 </ul>
