--- a/views/view.handlebars
+++ b/views/view.handlebars
@@ -1,18 +1,18 @@
 <header>
   <nav class="navbar navbar-expand-lg navbar-light bg-light mb-5">
-    <a class="navbar-brand" href="/index.html">Logo</a>
+    <a class="navbar-brand" href="/">Logo</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup"
       aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse justify-content-between" id="navbarNavAltMarkup">
       <div class="navbar-nav">
-        <a class="nav-item nav-link" href="/log.html">Log a Workout</a>
+        <a class="nav-item nav-link" href="/log">Log a Workout</a>
         <a class="nav-item nav-link" href="/view">View Workouts</a>
-        <a class="nav-item nav-link" href="/sync.html">Sync</a>
+        <a class="nav-item nav-link" href="/sync">Sync</a>
       </div>
       <div class="navbar-nav">
-        <a class="nav-item nav-link" href="/settings.html">Settings</a>
+        <a class="nav-item nav-link" href="/settings">Settings</a>
       </div>
     </div>
   </nav>
