Refactor view.html dropdown code

--- a/views/view.handlebars
+++ b/views/view.handlebars
@@ -37,7 +37,7 @@
 
   {{#if crossfit}}
   <div class="row">
-    <div class="col" id="crossfit">
+    <div class="col hide" id="crossfit">
       <h3>Crossfit</h3>
       {{#each crossfit}}
       {{>list/list}}
@@ -48,7 +48,7 @@
 
   {{#if hike}}
   <div class="row">
-    <div class="col" id="hike">
+    <div class="col hide" id="hike">
       <h3>Hike</h3>
       {{#each hike}}
       {{>list/list}}
@@ -59,7 +59,7 @@
 
   {{#if ride}}
   <div class="row">
-    <div class="col" id="ride">
+    <div class="col hide" id="ride">
       <h3>Ride</h3>
       {{#each ride}}
       {{>list/list}}
@@ -70,7 +70,7 @@
 
   {{#if run}}
   <div class="row">
-    <div class="col" id="run">
+    <div class="col hide" id="run">
       <h3>Run</h3>
       {{#each run}}
       {{>list/list}}
@@ -81,7 +81,7 @@
 
   {{#if swim}}
   <div class="row">
-    <div class="col" id="swim">
+    <div class="col hide" id="swim">
       <h3>Swim</h3>
       {{#each swim}}
       {{>list/list}}
@@ -92,7 +92,7 @@
 
   {{#if walk}}
   <div class="row">
-    <div class="col" id="walk">
+    <div class="col hide" id="walk">
       <h3>Walk</h3>
       {{#each walk}}
       {{>list/list}}
@@ -103,7 +103,7 @@
 
   {{#if other}}
   <div class="row">
-    <div class="col" id="other">
+    <div class="col hide" id="other">
       <h3>Other</h3>
       {{#each other}}
       {{>list/list}}
