view workouts in carousel

--- a/views/partials/list/list.handlebars
+++ b/views/partials/list/list.handlebars
@@ -1,26 +1,43 @@
-<ul class="list-group mb-4">
-  {{#if date}}
-  <li class="list-group-item">Date: {{date}}</li>
-  {{/if}}
-  {{#if time}}
-  <li class="list-group-item">Time: {{time}}</li>
-  {{/if}}
-  {{#if distance}}
-  <li class="list-group-item">Distance: {{distance}} miles</li>
-  {{/if}}
-  {{#if workout_length}}
-  <li class="list-group-item">Workout Length: {{workout_length}}</li>
-  {{/if}}
-  {{#if pace}}
-  <li class="list-group-item">Pace: {{pace}}</li>
-  {{/if}}
-  {{#if RPE}}
-  <li class="list-group-item">RPE: {{RPE}}</li>
-  {{/if}}
-  {{#if stress_score}}
-  <li class="list-group-item">Stress: {{stress_score}}</li>
-  {{/if}}
-  {{#if has_heartrate}}
-  <li class="list-group-item">Heart Rate: {{heart_rate}} BPM</li>
-  {{/if}}
-</ul>
+<div class="carousel-item">
+  <div class="card">
+    <div class="card-image">
+      <img src="/images/{{category}}.png">
+    </div>
+    <div class="card-content">
+      <ul class="">
+        {{#if date}}
+        <li class=""><strong>Date: </strong>{{date}}</li>
+        <hr>
+        {{/if}}
+        {{#if time}}
+        <li class=""><strong>Time: </strong>{{time}}</li>
+        <hr>
+        {{/if}}
+        {{#if distance}}
+        <li class=""><strong>Distance: </strong>{{distance}} miles</li>
+        <hr>
+        {{/if}}
+        {{#if workout_length}}
+        <li class=""><strong>Workout Length: </strong>{{workout_length}}</li>
+        <hr>
+        {{/if}}
+        {{#if pace}}
+        <li class=""><strong>Pace: </strong>{{pace}}</li>
+        <hr>
+        {{/if}}
+        {{#if RPE}}
+        <li class=""><strong>RPE: </strong>{{RPE}}</li>
+        <hr>
+        {{/if}}
+        {{#if stress_score}}
+        <li class=""><strong>Stress: </strong>{{stress_score}}</li>
+        <hr>
+        {{/if}}
+        {{#if has_heartrate}}
+        <li class=""><strong>Heart Rate: </strong>{{heart_rate}} BPM</li>
+        <hr>
+        {{/if}}
+      </ul>
+    </div>
+  </div>
+</div>
