--- a/views/view.handlebars
+++ b/views/view.handlebars
@@ -1,35 +1,18 @@
 <header>
   <nav>
-    <div class="nav-wrapper">
-      <a href="/" class="brand-logo">Logo</a>
+    <div class="nav-wrapper" style="background-color: whitesmoke; padding-right: 12em">
+      <a href="/homepage" class="brand-logo" style='color: rgb(33, 83, 116); font-size: 2.6em; padding-left: 4.3em'>Ascent</a>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
-        <li><a href="/log">Log a Workout</a></li>
-        <li><a href="/view">View Workouts</a></li>
-        <li><a href="/sync">Sync</a></li>
+        <li><a href="/homepage" style='color: rgb(33, 83, 116)'>Home</a></li>
+        <li><a href="/log" style='color: rgb(33, 83, 116)'>Log a Workout</a></li>
+        <li><a href="/view" style='color: rgb(33, 83, 116)'>View Workouts</a></li>
+        <li><a href="/sync" style='color: rgb(33, 83, 116)'>Sync</a></li>
       </ul>
     </div>
   </nav>
 </header>
 
 <main class="container">
-  <div class="row">
-    <div class="input-field col s12">
-      <select id="categorySelect">
-        <option value="1">All</option>
-        <option value="2">Crossfit</option>
-        <option value="3">Hike</option>
-        <option value="4">Ride</option>
-        <option value="5">Run</option>
-        <option value="6">Swim</option>
-        <option value="7">Walk</option>
-        <option value="8">Other</option>
-      </select>
-      <label>
-        Category
-      </label>
-    </div>
-  </div>
-
   {{#if all}}
   <div class="hideCategory row" id="all">
     <div class="col s12">
@@ -125,4 +108,23 @@
     </div>
   </div>
   {{/if}}
+
+  <div class="row">
+    <div class="input-field col s3">
+      <select id="categorySelect">
+        <option value="1"><span>All</span></option>
+        <option value="2"><span>Crossfit</span></option>
+        <option value="3"><span>Hike</span></option>
+        <option value="4"><span>Ride</span></option>
+        <option value="5"><span>Run</span></option>
+        <option value="6"><span>Swim</span></option>
+        <option value="7"><span>Walk</span></option>
+        <option value="8"><span>Other</span></option>
+      </select>
+      <label>
+        Category
+      </label>
+    </div>
+  </div>
+
 </main>
