delete workouts button, index.html wireframe

--- a/views/partials/list/list.handlebars
+++ b/views/partials/list/list.handlebars
@@ -33,7 +33,12 @@
         <li><strong>Stress: </strong><span class="workout-data">{{stress_score}}</span></li>
         <hr>
         {{/if}}
+        <li>
+          <button class='btn waves-effect waves-ligh' data-id= '{{id}}' >Delete</button>
+        </li>
       </ul>
+
+
     </div>
   </div>
 </div>
