logins and security'

--- a/views/view.handlebars
+++ b/views/view.handlebars
@@ -7,6 +7,9 @@
         <li><a href="/log" style='color: rgb(33, 83, 116)'>Log a Workout</a></li>
         <li><a href="/view" style='color: rgb(33, 83, 116)'>View Workouts</a></li>
         <li><a href="/sync" style='color: rgb(33, 83, 116)'>Sync</a></li>
+        <li class="nav-item">
+          <a id='logout' href='#logout' class="nav-link" style='color:rgb(33, 83, 116)'>Logout</a>
+        </li>
       </ul>
     </div>
   </nav>
